# data-engineering-agent

./: README.md  garbage document.txt  pyproject.toml
src/: compilation_errors.py  data-agent.py  data-agent3.py  data_engineering_eval_set.csv  dataform_examples.txt  delete_files.py  out  troubleshooting_guide.txt
src/data_agent/: .gitignore  README.md  main.py  out  requirements.txt
src/data_agent/agent/: __init__.py  agent_executor.py  agent_state.py  prompts.py  tools_context.py
src/data_agent/agent/tasks/: ask_clarifications.py  ask_for_further_input.py  decide_to_continue.py  generate_code.py  get_initial_user_request.py  identify_dataform_files.py  upload_files.py
src/data_agent/agent/tasks/elicit_schema/: __init__.py  handle_follow_up_questions.py  identify_missing_information.py  validate_source_tables.py  validate_target_tables.py  validate_transformations.py
src/data_agent/prompts/: ask_for_clarifications.yaml  fix_compilation_errors.yaml  generate_pipeline_code.yaml  parse_llm_output.yaml  refine_llm_response.yaml  structure_transformation_request.yaml
src/data_agent/prompts/guides/: dataform_examples2.txt
src/data_agent/tools/: bigquery.py  dataform.py  vertex_ai.py
src/data_agent/utils/: config.py  prompt_loader.py  tracers.py  validations.py
src/data_medic/: pipeline-medic.py
src/eval_generator/: eval_generator.py  eval_generator2.py  eval_generator3.py
src/previous_versions/: data-agent.py
src/previous_versions/working_versions/: data-agent2_working.py  data-agent3.py  data-agent_upload_validate.py
